--- a/employee-dashboard-app/src/styles.scss
+++ b/employee-dashboard-app/src/styles.scss
@@ -70,8 +70,16 @@ body {
     font-size: 11px;
     font-weight: bold;
     background-color: azure;
-    border-radius: 6px;
+    border-radius: 0.5rem;
     padding-left: 0.5rem;
+  }
+
+  .red-border {
+    border: 1px solid crimson !important;
+  }
+
+  .green-border {
+    border: 1px solid chartreuse !important;
   }
 }
 
