--- a/employee-dashboard-app/src/app/core/auth/components/login/login.component.html
+++ b/employee-dashboard-app/src/app/core/auth/components/login/login.component.html
@@ -1,7 +1,7 @@
 <div class="login-wrapper bubble">
   <form (ngSubmit)="onSubmit()" [formGroup]="form">
     <h2>Login</h2>
-    <div appShowError class="my-form-field">
+    <div class="my-form-field" appShowError>
       <input
         id="email"
         type="email"
