--- a/employee-dashboard-app/src/app/core/components/main-layout/main-layout.component.html
+++ b/employee-dashboard-app/src/app/core/components/main-layout/main-layout.component.html
@@ -1,5 +1,11 @@
 <header>
   <app-nav></app-nav>
 </header>
-<main></main>
+<app-side-bar>
+  <main>
+    <div class="container">
+      <router-outlet></router-outlet>
+    </div>
+  </main>
+</app-side-bar>
 <footer></footer>
