--- a/employee-dashboard-app/src/assets/styles/variables.scss
+++ b/employee-dashboard-app/src/assets/styles/variables.scss
@@ -1,5 +1,5 @@
 $main-app-color: #0abab5;
-$secondary-app-color: cadetblue;
+$secondary-app-color: #5f9ea0;
 
 $main-letters-color: ivory;
 $secondary-letters-color: gray;
