--- a/employee-dashboard-app/src/app/core/components/main-layout/main-layout.component.scss
+++ b/employee-dashboard-app/src/app/core/components/main-layout/main-layout.component.scss
@@ -6,8 +6,25 @@ footer {
 
 main {
   padding: 1% 0;
-  height: 100%;
   background: linear-gradient(90deg, black, transparent);
   min-height: calc(100vh - 6rem);
   overflow: auto;
+
+  .my-spinner {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+
+  ::ng-deep .mat-progress-spinner circle,
+  ::ng-deep .mat-spinner circle {
+    stroke: ivory;
+  }
+}
+
+footer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
