--- a/employee-dashboard-app/src/app/core/components/nav/nav.component.html
+++ b/employee-dashboard-app/src/app/core/components/nav/nav.component.html
@@ -6,7 +6,10 @@
     <h1 class="logo">Dashboard</h1>
   </div>
   <div class="loginBtn-wrapper">
-    <span [matMenuTriggerFor]="menu">test</span>
+    <div [matMenuTriggerFor]="menu" class="user-avatar">
+      <!-- <img [src]="user.uploadedImg" alt="" /> -->
+      <span>{{ user | nameInitials }}</span>
+    </div>
     <mat-menu #menu="matMenu">
       <button mat-menu-item (click)="onLogout()">
         <span class="material-symbols-rounded"> logout </span> Logout
